# bookstore

./: .dockerignore  .gitignore  Dockerfile  Makefile  Procfile  README.md  conftest.py  docker-compose.yml  documentacao.md  env.dev  heroku.yml  pyproject.toml  pytest.ini  requirements.txt  runtests.py  setup.cfg
.github/workflows/: build.yml  deploy-heroku.yml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/: tests.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/tests/test_viewset/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: __init__.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
