[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Booksotre API"
authors = ["Cesar Santos <csar.santos18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]

python = ">=3.8,<4.0.0"
django = ">=5.1.7,<6.0.0"
djangorestframework = ">=3.15.2,<4.0.0"
django-extensions = ">=3.2.3,<4.0.0"
django-debug-toolbar = ">=5.0.1,<6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
factory-boy = "^3.3.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
